Closed Bug 510388 Opened 15 years ago Closed 15 years ago

keyboard commands don't work after dismissing toolbar customization dialog

Categories

(Firefox :: Toolbars and Customization, defect)

All
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Firefox 3.7a1
Tracking Status
status1.9.2 --- beta2-fixed

People

(Reporter: jaas, Assigned: enndeakin)

References

Details

(Keywords: regression, verified1.9.2)

Attachments

(1 file, 1 obsolete file)

Using Firefox 3.6 or higher (not a problem in Firefox 3.5):
1. Close all windows.
2. Open one window.
3. Use the mouse to select "Customize..." from the Toolbars submenu.
4. Hit "Done" with the mouse to dismiss the toolbar customization window.
5. Hit "cmd-n" to try to open a new window.

Expected result:
A new window should open.

Actual result:
Nothing happens. Must click on the open window in order to be able to use most keyboard commands again.
Flags: blocking1.9.2+
I can reproduce this.
Here's the regression range:

firefox-2009-06-10-03-mozilla-central
firefox-2009-06-11-03-mozilla-central

Which means this is fallout from Neil Deakin's big focus patch (bug
178324).

Unfortunately, my patch for bug 504450 doesn't fix this.
Blocks: 178324
Component: Widget: Cocoa → Toolbars
Flags: blocking1.9.2+
Product: Core → Firefox
QA Contact: cocoa → toolbars
This bug is caused because when unfocusing during popup hide, descendant documents are not checked. To fix this, check if the current focus is in a child frame as well.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attached patch use select() instead of focus() (obsolete) — Splinter Review
Attachment #394849 - Attachment is obsolete: true
Attachment #394861 - Flags: review?(neil)
Comment on attachment 394861 [details] [diff] [review]
use select() instead of focus()

Bah, wrong bug.
Attachment #394861 - Flags: review?(neil)
Attachment #394849 - Attachment is obsolete: false
Attachment #394861 - Attachment is obsolete: true
Attachment #394849 - Flags: review?(bzbarsky)
Attachment #394849 - Flags: review?(bzbarsky) → review+
Comment on attachment 394849 [details] [diff] [review]
check descendant documents for focus when closing a popup 

I guess this works for now...
Attachment #394849 - Flags: superreview?(Olli.Pettay)
Attachment #394849 - Flags: superreview?(Olli.Pettay) → superreview+
http://hg.mozilla.org/mozilla-central/rev/80e7992016ee
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Attachment #394849 - Flags: approval1.9.2?
Comment on attachment 394849 [details] [diff] [review]
check descendant documents for focus when closing a popup 

a192=beltzner

bz, you said "this works for now," please make sure to file a follow up if you have one! :)
Attachment #394849 - Flags: approval1.9.2? → approval1.9.2+
Verified fixed on trunk with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.3a1pre) Gecko/20090922 Minefield/3.7a1pre ID:20090922030618
Status: RESOLVED → VERIFIED
Target Milestone: --- → Firefox 3.7a1
Verified fixed on 1.9.2 with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.2b2pre) Gecko/20091030 Namoroka/3.6b2pre ID:20091030043032
Keywords: verified1.9.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: