Bug 510388, check descendant documents for focus when closing popups, r=bz,sr=smaug